# advanced-database

./: .gitignore  README.md  errors.md  pyproject.toml  redis-demo.ipynb
2025-02-14/: diamond.py  main.py  triangles.py
2025-02-19/: main.py
2025-02-26/: inheritance.py  main.py
mint-student-db/: main.py
orm-mint/: docker-compose.yaml  main.py  orm.ipynb  pyproject.toml  pytest.ini  testing.ipynb
orm-mint/migrations/: env.py
orm-mint/migrations/versions/: 21e0df5ec2c5_.py  250d504315e6_.py  2cb2134cd836_.py  3a758b466834_.py  4574c86b0007_.py  52305f4244c7_.py  5b254db7075b_.py  6362cb11929a_.py  7619c1af0e25_.py  8465603b5bca_.py  9310812f29b3_.py  99225e07bcb3_.py  a0a9251c5cc7_.py  a815dacb1cc4_.py  ace118b20895_.py  b2e45fa075b4_.py  dc720efdb5e8_.py
orm-mint/models/: Game.py  Pokemon.py  SteamGame.py  Trainer.py  dnd.py  library.py
orm-mint/tests/: demo.py  test_utils.py
orm-mint/topics/: exceptions.py
